--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,73 @@
 .container {
-  max-width: 1920px;
+  width: 1640px;
 }
 a {
   text-decoration: none;
   color: grey;
 }
+li {
+  list-style: none;
+}
+nav,
+nav li {
+  display: flex;
+  gap: 50px;
+}
 header {
   display: flex;
-  gap: 10px;
+  gap: 15px;
   justify-content: end;
 }
-img {
+
+.seqcia-1 img {
   display: flex;
   justify-content: center;
   padding-top: 50px;
   padding-left: 100px;
+  padding-bottom: 100px;
+}
+.seqcia-2 h1 {
+  margin: 100px;
+}
+
+.popularuli {
+  display: inline-block;
+  width: 483px;
+  height: 282px;
+  padding-left: 100px;
+  padding: 10px;
+  box-shadow: 0px 3px 6px #00000029;
+  opacity: 1;
+}
+
+.popularuli-2 {
+  display: inline-block;
+  width: 483px;
+  height: 282px;
+  padding: 10px;
+  box-shadow: 0px 3px 6px #00000029;
+  opacity: 1;
+}
+.popularuli-3 {
+  display: inline-block;
+  width: 483px;
+  height: 282px;
+  padding: 10px;
+  box-shadow: 0px 3px 6px #00000029;
+  opacity: 1;
+}
+footer {
+  display: flex;
+  gap: 363px;
+  background-color: black;
+  color: white;
+  margin: 50px 100px 0 100px;
+}
+.fc-ig {
+  display: flex;
+  gap: 34px;
+  align-items: center;
+}
+.load-more {
+  text-decoration: underline;
 }
