--- a/src/styles.css
+++ b/src/styles.css
@@ -26,8 +26,9 @@ header {
   padding-left: 100px;
   padding-bottom: 100px;
 }
-.seqcia-2 h1 {
-  margin: 100px;
+.seqcia-2 h1,
+.seqcia-2 {
+  margin-left: 100px;
 }
 
 .popularuli {
